force-app/main/default/objects/InvoiceDetails__c/InvoiceDetails__c.object-meta.xml
<CustomObject>
    <description>Stores invoice records and tracks payments for services or sponsorships, ensuring all parties involved in the event are paid properly and on time</description>
    <label>InvoiceDetails</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InvoiceDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>