force-app/main/default/objects/InvoiceDetails__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client to be invoiced</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>InvoiceDetails</relationshipLabel>
    <relationshipName>InvoiceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>