force-app/main/default/objects/InvoiceDetails__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event Name</description>
    <label>Event Details</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>InvoiceDetails</relationshipLabel>
    <relationshipName>InvoiceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>