force-app/main/default/objects/InvoiceDetails__c/fields/Event_Finance__c.field-meta.xml
<CustomField>
    <fullName>Event_Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Finance</label>
    <referenceTo>Finance__c</referenceTo>
    <relationshipLabel>InvoiceDetails</relationshipLabel>
    <relationshipName>InvoiceDetails</relationshipName>
    <type>Lookup</type>
</CustomField>