force-app/main/default/objects/InvoiceDetails__c/fields/Generate_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Generate_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Invoice</label>
    <type>Checkbox</type>
</CustomField>