force-app/main/default/objects/InvoiceDetails__c/fields/Hospitality_Venue_Expense__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Venue_Expense__c</fullName>
    <label>Hospitality Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>