force-app/main/default/objects/InvoiceDetails__c/fields/Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ID__c</fullName>
    <displayFormat>INVOICEID-{000000}</displayFormat>
    <label>Invoice ID</label>
    <type>AutoNumber</type>
</CustomField>