force-app/main/default/objects/InvoiceDetails__c/fields/Logistic_Expense__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Expense__c</fullName>
    <label>Logistic Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>