force-app/main/default/objects/InvoiceDetails__c/fields/Staff_Expense__c.field-meta.xml
<CustomField>
    <fullName>Staff_Expense__c</fullName>
    <label>Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>