force-app/main/default/objects/InvoiceDetails__c/fields/Total_Amount_to_Pay_Including_GST_18__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_to_Pay_Including_GST_18__c</fullName>
    <label>Total Amount to Pay (Including GST 18% )</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>