force-app/main/default/objects/InvoiceDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Expenses__c</columns>
    <columns>Food_Expense__c</columns>
    <columns>Hospitality_Venue_Expense__c</columns>
    <columns>Logistic_Expense__c</columns>
    <columns>Staff_Expense__c</columns>
    <columns>Miscellaneous_Expense__c</columns>
    <columns>Amount_Paid__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>